# bbcli

./: .alt  .gitignore  .pdm.toml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  config.ini  pyproject.toml  requirement.txt  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: support_notice.md
.github/workflows/: ci.yaml  ci.yml  codeql-analysis.yml  codeql.yml  pylint.yml  sonarcloud.yml  update-deps.yaml
app/: __init__.py  main.py
app/scripts/: create.py  delete.py  diff.py  merge.py  review.py  show.py  test.py  view.py
app/utils/: api.py  command.py  docs.py  iniparser.py  request.py  richprint.py
bb/: __init__.py  __version__.py  main.py
bb/auth/: __init__.py
bb/pr/: __init__.py  configtest.py  copy.py  create.py  delete.py  diff.py  list.py  merge.py  review.py  show.py  view.py
bb/repo/: __init__.py  archive.py  create.py  delete.py
bb/utils/: api.py  cmnd.py  constants.py  cp.py  helper.py  ini.py  iniparser.py  request.py  richprint.py  validate.py
tests/: props.py  test_api.py  test_auth.py  test_bb.py  test_cmnd.py  test_constants.py  test_copy.py  test_cp.py  test_create.py  test_delete.py  test_diff.py  test_helper.py  test_iniparser.py  test_main.py  test_merge.py  test_pr.py  test_pr_create.py  test_pr_delete.py  test_pr_diff.py  test_pr_list.py  test_pr_merge.py  test_pr_review.py  test_pr_view.py  test_repo.py  test_request.py  test_review.py  test_richprint.py  test_show.py  test_test.py  test_validate.py  test_version.py
