[project]
name = "bb"
dynamic = ["version"]
description = "Work seamlessly with BitBucket from the command line."
authors = [{ name = "psadi", email = "ps.adithya@icloud.com" }]
dependencies = ["typer[all]>=0.7.0", "httpx>=0.24.0"]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
bb = "bb:_bb"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
version = { source = "file", path = "bb/__version__.py" }

[tool.pdm.build]
includes = ["bb"]
excludes = ["tests"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.1",
    "tox>=4.4.5",
    "pytest-cov>=4.0.0",
    "tox-pdm>=0.6.1",
    "ruff>=0.0.257",
    "bandit>=1.7.5",
    "pyyaml>=6.0.1",
]

[tool.pdm.scripts]
bb = { call = "bb:_bb" }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E501"]

[tool.bandit]
skips = ["B404", "B603", "B607"]
