############################################################################
# Bitbucket CLI (bb): Work seamlessly with Bitbucket from the command line
#
# Copyright (C) 2022  P S, Adithya (psadi) (ps.adithya@icloud.com)
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
############################################################################

[project]
name = "bb"
dynamic = ["version"]
description = "Work seamlessly with BitBucket from the command line."
authors = [{ name = "psadi", email = "ps.adithya@icloud.com" }]
dependencies = ["typer>=0.7.0", "httpx>=0.24.0"]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "AGPL" }

[project.scripts]
bb = "bb:_bb"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
version = { source = "file", path = "bb/__version__.py" }
plugins = ["pdm-autoexport"]

[tool.pdm.build]
includes = ["bb"]
excludes = ["tests"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.1",
    "tox>=4.4.5",
    "pytest-cov>=4.0.0",
    "tox-pdm>=0.6.1",
    "ruff>=0.0.257",
    "bandit>=1.7.5",
    "pyyaml>=6.0.1",
    "zipp>=3.19.1",
    "pre-commit>=3.5.0",
]

[[tool.pdm.autoexport]]
filename = "requirements.txt"
groups = ["default", "dev"]
without-hashes = true

[tool.pdm.scripts]
bb = { call = "bb:_bb" }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E501"]

[tool.bandit]
skips = ["B404", "B603", "B607"]
